[*] 适配spring authorization server 1.1.1